# electroslag

./: .gitignore  CMakeLists.txt  NOTICE  README.md  TODO  electroslag.vs2015.sln  electroslag.vs2015.vcxproj  electroslag.vs2015.vcxproj.filters
electroslag/: buffer_stream.hpp  delegate.hpp  dynamic_array.hpp  dynamic_library.hpp  event.hpp  exception.hpp  file_stream.cpp  file_stream.hpp  logger.cpp  logger.hpp  main.cpp  name_table.cpp  name_table.hpp  named_object.cpp  named_object.hpp  precomp.cpp  precomp.hpp  reference.hpp  referenced_buffer.hpp  referenced_object.hpp  resource.cpp  resource.hpp  resource.rc  resource_id.hpp  stream_interface.hpp  systems.cpp  systems.hpp  utility.cpp  utility.hpp  version.hpp  windows_sdk.hpp
electroslag/animation/: animated_object.hpp  constant_value_controller.hpp  property.hpp  property_controller_interface.hpp  property_controller_typed_interface.hpp  property_manager.cpp  property_manager.hpp  property_manager_interface.hpp  velocity_controller.hpp
electroslag/application/: application.cpp  application.hpp  loading_screen.cpp  loading_screen.hpp
electroslag/graphics/: buffer_descriptor.cpp  buffer_descriptor.hpp  buffer_interface.hpp  buffer_opengl.cpp  buffer_opengl.hpp  command_queue.cpp  command_queue.hpp  command_queue_interface.hpp  context_capability_interface.hpp  context_interface.hpp  context_opengl.cpp  context_opengl.hpp  double_buffer_queue.cpp  double_buffer_queue.hpp  frame_buffer_interface.hpp  frame_buffer_opengl.cpp  frame_buffer_opengl.hpp  graphics_debugger_interface.hpp  graphics_interface.hpp  graphics_opengl.cpp  graphics_opengl.hpp  graphics_types.hpp  image_descriptor.cpp  image_descriptor.hpp  primitive_stream_descriptor.cpp  primitive_stream_descriptor.hpp  primitive_stream_interface.hpp  primitive_stream_opengl.cpp  primitive_stream_opengl.hpp  render_policy.cpp  render_policy.hpp  render_thread.cpp  render_thread.hpp  serialized_graphics_types.cpp  serialized_graphics_types.hpp  shader_field.hpp  (+24 more)
(+131 files in other folders)
